[package]
name = "api_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { git = "https://github.com/gyscos/cursive" }
dotenv = "0.15.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
